Retrieve ponds endpoint
